--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>bot-integration</module>
         <module>neo-cli4j</module>
         <module>wrapper</module>
+        <module>eos-cli4j</module>
     </modules>
 
     <properties>
